--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
@@ -532,7 +532,7 @@ input[type="text"].select2-search__field {
 }
 
 .customize-control-ast-responsive-background .more-settings {
-  margin-top: 6px;
+  margin-top: 12px;
   display: inline-block;
   padding: 5px 0 5px 0;
   float: right;
