--- a/inc/customizer/custom-controls/assets/css/unminified/responsive-background.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/responsive-background.css
@@ -61,7 +61,7 @@
 }
 
 .customize-control-ast-responsive-background .more-settings {
-  margin-top: 6px;
+  margin-top: 12px;
   display: inline-block;
   padding: 5px 0 5px 0;
   float: right;
